force-app/main/default/objects/ScheduleIntervalSettings__mdt/ScheduleIntervalSettings__mdt.object-meta.xml
<CustomObject>
    <description>Set interval for schedule.</description>
    <label>ScheduleIntervalSetting</label>
    <pluralLabel>ScheduleIntervalSettings</pluralLabel>
</CustomObject>