force-app/main/default/objects/ScheduleIntervalSettings__mdt/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Days</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>