force-app/main/default/objects/ScheduleIntervalSettings__mdt/fields/Hour__c.field-meta.xml
<CustomField>
    <fullName>Hour__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>