force-app/main/default/objects/ScheduleIntervalSettings__mdt/fields/Minutes__c.field-meta.xml
<CustomField>
    <fullName>Minutes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Minutes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>