force-app/main/default/objects/ScheduleIntervalSettings__mdt/fields/Seconds__c.field-meta.xml
<CustomField>
    <fullName>Seconds__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Seconds</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>