force-app/main/default/objects/ScheduleIntervalSettings__mdt/fields/Years__c.field-meta.xml
<CustomField>
    <fullName>Years__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Years</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>